--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,33 +1,36 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #333;
-    padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
+  padding: 20px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   }
   
   .navbar-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
   }
   
   .navbar-item {
-    margin-right: 20px;
-    
-    
+  margin-right: 20px;
+  padding: 10px;
+  border-radius: 5px;
   }
+  
   .navbar-item:hover {
-    box-shadow: 0 0 10px #ddd;
+  background-color: #555;
   }
   
   .navbar-item:last-child {
-    margin-right: 0;
+  margin-right: 0;
   }
   
   a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
   }
-  
