--- a/src/LoginForm.css
+++ b/src/LoginForm.css
@@ -24,4 +24,20 @@
   .reg-item {
     padding : 10px;
   }
+  .error-message {
+    color: #4CAF50;
+    font-size: 14px;
+    margin-top: 8px;
+    font-style: italic;
+    animation: fade 1s infinite alternate;
+  }
+  
+  @keyframes fade {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
   
