added login, register, market reg

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     padding: 20px;
     width: 111%;
   }
+
   #about,
   #services,
   #testimonials,
@@ -15,4 +16,8 @@
   #portfolio {
     width: 110%;
   }
+}
+
+.othercomponents {
+  padding-top: 70px;
 }
