--- a/src/MarketPlace.css
+++ b/src/MarketPlace.css
@@ -8,15 +8,14 @@
   width: 400px;
   margin-right: 20px;
   border-right: 2px solid grey;
-  
 }
 
-
 .marketplace-form {
-  padding: 20px;
-  background-color: transparent;
+  padding: 5px;
+  margin-top: -30px;
+  background-color: #141b2d;
   border-radius: 10px;
-  border-color: black ;
+  border-color: black;
 }
 
 .form-input,
@@ -35,17 +34,19 @@
   border: none;
   border-radius: 3px;
   cursor: pointer;
+  width: 100%;
+  margin-top: 10px;
 }
 
 .back-btn {
-  
- position: absolute;
+  position: relative;
+  margin-bottom: 50px;
   top: 2rem;
-  left: 4%;
+  left: 10%;
   transform: translateX(-50%);
   cursor: pointer;
-
-  
+  width: 100%;
+  margin-top: 10px;
 }
 
 .component-list-container {
@@ -86,15 +87,46 @@
   border-radius: 3px;
   cursor: pointer;
 }
+
 .component-entry .list-button2 {
   padding: 10px;
   margin-left: 10px;
-  
 }
 
 .list-button3 {
-  position: fixed;
+  position: relative;
   bottom: 0;
   right: 0;
 
+}
+
+.labelformarket {
+  font-size: small;
+}
+
+/* Media queries for small screens */
+@media only screen and (max-width: 767px) {
+  .marketplace-container {
+    flex-wrap: wrap;
+  }
+
+  .add-component-container {
+    width: 100%;
+    margin-right: 0;
+    border-right: none;
+  }
+
+  .marketplace-form {
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+
+  .back-btn {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+.header2tag {
+  color: white;
 }
