--- a/src/MarketPlace.css
+++ b/src/MarketPlace.css
@@ -104,6 +104,11 @@
   font-size: small;
 }
 
+.add-component-button {
+  background-color: rgb(125, 145, 243);
+  margin-right: 10px;
+}
+
 /* Media queries for small screens */
 @media only screen and (max-width: 767px) {
   .marketplace-container {
