--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,9 +1,24 @@
-.cards {
-  display: flex;
+.cards {  display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding-left: 400px;
+}
+
+/* Responsive adjustments */
+@media screen and (max-width: 768px) {
+  /* Change padding to make it responsive */
+  .cards {
+    padding-left: 50px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  /* Further adjustments for smaller screens */
+  .cards {
+    padding-left: 20px;
+    flex-wrap: wrap; /* Allow cards to wrap on smaller screens */
+  }
 }
 
 .card {
@@ -25,8 +40,8 @@
 
   /* Add media query for screens smaller than 768px */
   @media screen and (max-width: 768px) {
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     margin: 10px;
   }
 }
