--- a/src/MarketPlace.css
+++ b/src/MarketPlace.css
@@ -17,7 +17,10 @@
   border-radius: 10px;
   border-color: black;
 }
-
+.selectcategory {
+  color:  black;
+  margin-right: 100px;
+}
 .form-input,
 .form-textarea {
   width: 100%;
