--- a/src/login&registration/RegisterForm.css
+++ b/src/login&registration/RegisterForm.css
@@ -21,7 +21,7 @@
     cursor: pointer;
   }
   .error-message {
-    color: #4CAF50;
+    color: red;
     font-size: 14px;
     margin-top: 8px;
     font-style: italic;
