--- a/src/login&registration/LoginForm.css
+++ b/src/login&registration/LoginForm.css
@@ -27,11 +27,13 @@
 }
 
 .error-message {
-  color: #4CAF50;
+  color: red;
   font-size: 14px;
   margin-top: 8px;
   font-style: italic;
   animation: fade 1s infinite alternate;
+  margin-left: -10px;
+  margin-right:  100px;
 }
 
 @keyframes fade {
